# llvm-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Kaleidoscope/: CMakeLists.txt
Kaleidoscope/BuildingAJIT/: CMakeLists.txt
Kaleidoscope/BuildingAJIT/Chapter1/: CMakeLists.txt
Kaleidoscope/BuildingAJIT/Chapter2/: CMakeLists.txt
Kaleidoscope/BuildingAJIT/Chapter3/: CMakeLists.txt
Kaleidoscope/BuildingAJIT/Chapter4/: CMakeLists.txt
Kaleidoscope/Chapter2/: CMakeLists.txt
Kaleidoscope/Chapter3/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter4/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter5/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter6/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter7/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter8/: CMakeLists.txt  toy.cpp
Kaleidoscope/Chapter9/: CMakeLists.txt  toy.cpp
Kaleidoscope/include/: KaleidoscopeJIT.h
LLVMCoreLibExamples/: CMakeLists.txt
LLVMCoreLibExamples/chapter3/: CMakeLists.txt  main.cpp  test.cpp
LLVMCoreLibExamples/chapter4-ast/: CMakeLists.txt
LLVMCoreLibExamples/chapter4-diag/: main.cpp
LLVMCoreLibExamples/chapter4-full/: main.cpp
LLVMCoreLibExamples/chapter5-ir/: CMakeLists.txt  main.cpp
LLVMCoreLibExamples/chapter5-pass/: CMakeLists.txt  main.cpp
Others/: CMakeLists.txt
Others/LinalgGEMM/: CMakeLists.txt  README.md  gemm_example.cpp
Others/MatrixMul/: CMakeLists.txt  main.cpp
Others/SQLGen/: CMakeLists.txt  README.md  sqlgen.cpp
Others/llvm-pass-skeleton/: CMakeLists.txt  README.md  Skeleton.cpp
Others/mlir-crash-mapping/: CMakeLists.txt  README.md  main.cpp
Others/mlir-crash-mapping/dialect/: CMakeLists.txt  Ops.cpp  Ops.h  Test.td  TestDialect.cpp  TestDialect.h  TestDialect.td
book/: Chapter10_The_MLIR_Ecosystem.md  Chapter1_The_Compiler_Problem_Space.md  Chapter2_Building_Intuition_The_AST_Phase.md  Chapter3_Your_First_MLIR_Dialect.md  Chapter4_Transformations_and_Rewriting.md  Chapter5_Interfaces_and_Reusability.md  Chapter6_Partial_Lowering_to_Affine.md  Chapter7_Complete_Lowering_to_LLVM_and_JIT.md  Chapter8_TableGen_Mastery.md  Chapter9_Designing_Custom_Dialects.md
chapter3/: CMakeLists.txt
chapter4-ast/: main.cpp
chapter4-diag/: CMakeLists.txt
chapter4-full/: CMakeLists.txt
cmake-modules/: AzureVcpkg.cmake
toy/: CMakeLists.txt
toy/Ch1/: CMakeLists.txt  ast.toy
toy/Ch2/: CMakeLists.txt
toy/Ch2Simple/: CMakeLists.txt  codegen.toy  toyc.cpp
toy/Ch2Simple/include/toy/: AST.h  CMakeLists.txt  Ops.td  Parser.h
toy/Ch2Simple/mlir/: Dialect.cpp  MLIRGen.cpp
toy/Ch3/: CMakeLists.txt
toy/Ch3/mlir/: ToyCombine.td
toy/Ch4/: CMakeLists.txt
toy/Ch5/: CMakeLists.txt
toy/Ch6/: CMakeLists.txt
toy/Ch7/: CMakeLists.txt
